# edu-scribe

./: .env.example  .gitignore  .vercelignore  DEPLOYMENT_FIXES.md  README.md  agent.py  inspect_adk.py  list_models.py  pedagogy.txt  pyproject.toml  requirements.txt  run_terminal.py  run_with_env.py  test_agent.py  tools.py  vercel.json
.github/workflows/: ci.yml
api/: index.py
corpus/: pedagogy.txt
scripts/: check_tools.py  google_search_stub.py  inspect_adk.py  list_models.py  make_zip.py  test_agent.py
