[tool.poetry]
name = "edu-scribe"
version = "0.1.0"
description = "A FastAPI application for Vercel."

[tool.poetry.dependencies]
fastapi = "^0.68.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
        
[project.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port $PORT --reload"

[tool.vercel]
framework = "fastapi"