[tool.poetry]
name = "edu-scribe"
version = "0.1.0"
description = "A brief description of your project"
authors = ["Yuv2121 <your_email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"